--- a/requirements.txt
+++ b/requirements.txt
@@ -55,7 +55,7 @@ requests-oauthlib==1.3.0
 rsa==4.6
 sacremoses==0.0.43
 scipy==1.4.1
-sentencepiece==0.1.94
+sentencepiece
 six==1.15.0
 tensorboard==2.3.0
 tensorboard-plugin-wit==1.7.0
@@ -75,4 +75,4 @@ wrapt==1.12.1
 zipp==3.1.0
 nvidia-ml-py3 
 pytorch-transformers==1.2.0
-transformers==3.5.1
+transformers==4.19.2
