--- a/requirements.txt
+++ b/requirements.txt
@@ -57,9 +57,8 @@ sacremoses==0.0.43
 scipy==1.4.1
 sentencepiece
 six==1.15.0
-tensorboard==2.3.0
 tensorboard-plugin-wit==1.7.0
-tensorflow==2.3.0
+tensorboard
 tensorflow-estimator==2.3.0
 termcolor==1.1.0
 #tokenizers==0.8.1rc1
