--- a/requirements.txt
+++ b/requirements.txt
@@ -1,77 +1,9 @@
-# absl-py==0.10.0
-# astunparse==1.6.3
-# backcall==0.2.0
-# cachetools==4.1.1
-# certifi==2020.6.20
-# cffi==1.14.2
-# chardet==3.0.4
-# click==7.1.2
-# cloudpickle==1.6.0
-# cycler==0.10.0
-# decorator==5.0.9
-filelock==3.0.12
-# future==0.18.2
-# gast==0.3.3
-# google-auth==1.21.1
-# google-auth-oauthlib==0.4.1
-# google-pasta==0.2.0
-# graphviz==0.8.4
-# grpcio==1.31.0
-# h5py==2.10.0
-# idna==2.10
-# importlib-metadata==1.7.0
-# ipython==7.24.1
-# ipython-genutils==0.2.0
-# jedi==0.18.0
-# joblib==0.17.0
-# Keras==2.4.3
-# Keras-Preprocessing==1.1.2
-# kiwisolver==1.3.1
-# Markdown==3.2.2
-# matplotlib==3.4.1
-# matplotlib-inline==0.1.2
+filelock==3.8.0
 numpy==1.18.5
-oauthlib==3.1.0
+nvidia-ml-py3==7.352.0
+oauthlib==3.2.1
 opt-einsum==3.3.0
-#packaging==20.4
-# parso==0.8.2
-# pexpect==4.8.0
-# pickleshare==0.7.5
-# Pillow==7.2.0
-# prompt-toolkit==3.0.18
-# protobuf==3.13.0
-# psutil==5.7.2
-# ptyprocess==0.7.0
-# pyasn1==0.4.8
-# pyasn1-modules==0.2.8
-# pycparser==2.20
-# Pygments==2.9.0
-# pyparsing==2.4.7
-#python-dateutil==2.8.1
-# PyYAML==5.3.1
-# regex==2020.11.13
-# requests==2.24.0
-# requests-oauthlib==1.3.0
-# rsa==4.6
-# sacremoses==0.0.43
-# scipy==1.4.1
-# sentencepiece
-# six==1.15.0
-# tensorboard-plugin-wit==1.7.0
-# tensorboard
-# tensorflow-estimator==2.3.0
-# termcolor==1.1.0
-# #tokenizers==0.8.1rc1
-# torch
-# torchvision
-# tqdm==4.54.1
-# traitlets==5.0.5
-# typing==3.7.4.3
-# urllib3==1.25.10
-# wcwidth==0.2.5
-# Werkzeug==1.0.1
-# wrapt==1.12.1
-# zipp==3.1.0
-nvidia-ml-py3 
-# pytorch-transformers==1.2.0
-#transformers==4.19.2
+psutil==5.7.2
+scipy==1.4.1
+#torch==1.9.0+cu111
+typing_extensions==4.3.0
