--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-filelock==3.8.0
-numpy==1.18.5
+jieba==0.42.1
+matplotlib==3.4.1
 nvidia-ml-py3==7.352.0
-oauthlib==3.2.1
 opt-einsum==3.3.0
 psutil==5.7.2
+pytorch-transformers==1.2.0
 scipy==1.4.1
-#torch==1.9.0+cu111
-typing_extensions==4.3.0
+tensorboard==2.3.0
+transformers
