new file:   bin/build.sh

--- a/setup.cfg
+++ b/setup.cfg
@@ -3,7 +3,7 @@ name = TopSpin
 authors = Summer Xia
 author_email = tianxia0209@gmail.com
 version = 1.1.4
-description = A high-level distributed Deep Learning training framework, based on PyTorch, with extral support of parameter searching.
+description = A PyTorch based high-level Deep Learning training framework. Seamlessly switch between single-GPU and multi-server; Supports gradient accumulation, learning rate warmup and decay, early stop, mixed precision training, and AutoML.
 long_description = file: README.md
 long_description_content_type = text/markdown
 url = https://github.com/SummerRainET2008/TopSpin
