modified:   README.md   modified:   pyproject.toml   modified:   requirements.txt

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,15 @@
+tensorboard==2.3.0
+packaging
+numpy==1.23.4
+protobuf==3.20.*
+psutil==5.7.2
+Python-Algorithm-pyal
+
+
 jieba==0.42.1
 matplotlib==3.4.1
 nvidia-ml-py3==7.352.0
 opt-einsum==3.3.0
-psutil==5.7.2
 pytorch-transformers==1.2.0
 scipy==1.4.1
-tensorboard==2.3.0
 transformers
-numpy==1.23.4
-Python-Algorithm-pyal
