--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,13 +1,16 @@
 [build-system]
 requires = [
-"Python-Algorithm-pyal",
-"matplotlib>=3.4.1",
-"numpy>=1.23.4",
-"nvidia-ml-py3>=7.352.0",
-"psutil>=5.7.2",
-"scipy>=1.4.1",
-"setuptools>=42", 
-"tensorboard>=2.3.0",
-"wheel", 
+    "tensorboard>=2.3.0",
+    "packaging",
+    "numpy>=1.23.4",
+    "protobuf==3.20.*",
+    "psutil>=5.7.2",
+    "Python-Algorithm-pyal",
+
+#"matplotlib>=3.4.1",
+#"nvidia-ml-py3>=7.352.0",
+#"scipy>=1.4.1",
+"setuptools>=42",
+"wheel",
 ]
 build-backend = "setuptools.build_meta"
