--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,10 +7,8 @@ dependencies = [
    "psutil==5.7.2",
    "pytz",
    "Python-Algorithm-pyal",
-
-#"matplotlib>=3.4.1",
-#"nvidia-ml-py3>=7.352.0",
-#"scipy>=1.4.1",
+   "matplotlib>=3.4.1",
+   "nvidia-ml-py3>=7.352.0",
 ]
 
 [build-system]
