--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,12 @@
-tensorboard==2.3.0
-packaging
+Python-Algorithm-pyal
+filelock==3.7.1
+h5py==3.9.0
+matplotlib==3.4.1
 numpy==1.23.4
+nvidia-ml-py3==7.352.0
+packaging
 protobuf==3.20.*
 psutil==5.7.2
-Python-Algorithm-pyal
-pytz
-matplotlib==3.4.1
-nvidia-ml-py3==7.352.0
 pytorch-transformers==1.2.0
+pytz
+tensorboard==2.3.0
